--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,12 @@
             <artifactId>spark-core_2.12</artifactId>
             <version>3.3.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.12</artifactId>
+            <version>3.3.4</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
